Support Theme: Make sure topics and replies tables in profiles use the available screen width on mobile devices.
Props bcworkz.
Fixes #3196.

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@6031 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
@@ -457,6 +457,11 @@ section {
 		font-size: ms(-2);
 	}
 
+	#bbpress-forums #bbp-user-wrapper ul.bbp-topics,
+	#bbpress-forums #bbp-user-wrapper ul.bbp-replies {
+		clear: both;
+	}
+
 	#wp-link-wrap {
 		font-size: ms(-3);
 	}
