--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/style-rtl.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/style-rtl.css
@@ -2931,6 +2931,11 @@ section {
 	font-size: 0.8rem;
 }
 
+.bbpress #bbpress-forums #bbp-user-wrapper ul.bbp-topics,
+.bbpress #bbpress-forums #bbp-user-wrapper ul.bbp-replies {
+	clear: both;
+}
+
 .bbpress #wp-link-wrap {
 	font-size: 0.73152rem;
 }
